zad3/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations fundefs_opt instructions_opt
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> <empty>
Rule 4     declaration -> TYPE inits ;
Rule 5     declaration -> error ;
Rule 6     inits -> inits , init
Rule 7     inits -> init
Rule 8     init -> ID = expression
Rule 9     instructions_opt -> instructions
Rule 10    instructions_opt -> <empty>
Rule 11    instructions -> instructions instruction
Rule 12    instructions -> instruction
Rule 13    instruction -> print_instr
Rule 14    instruction -> labeled_instr
Rule 15    instruction -> assignment
Rule 16    instruction -> choice_instr
Rule 17    instruction -> while_instr
Rule 18    instruction -> repeat_instr
Rule 19    instruction -> return_instr
Rule 20    instruction -> break_instr
Rule 21    instruction -> continue_instr
Rule 22    instruction -> compound_instr
Rule 23    instruction -> expression ;
Rule 24    print_instr -> PRINT expr_list ;
Rule 25    print_instr -> PRINT error ;
Rule 26    labeled_instr -> ID : instruction
Rule 27    assignment -> ID = expression ;
Rule 28    choice_instr -> IF ( condition ) instruction
Rule 29    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 30    choice_instr -> IF ( error ) instruction
Rule 31    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 32    while_instr -> WHILE ( condition ) instruction
Rule 33    while_instr -> WHILE ( error ) instruction
Rule 34    repeat_instr -> REPEAT instructions UNTIL condition ;
Rule 35    return_instr -> RETURN expression ;
Rule 36    continue_instr -> CONTINUE ;
Rule 37    break_instr -> BREAK ;
Rule 38    compound_instr -> { declarations instructions_opt }
Rule 39    condition -> expression
Rule 40    const -> INTEGER
Rule 41    const -> FLOAT
Rule 42    const -> STRING
Rule 43    expression -> const
Rule 44    expression -> ID
Rule 45    expression -> expression + expression
Rule 46    expression -> expression - expression
Rule 47    expression -> expression * expression
Rule 48    expression -> expression / expression
Rule 49    expression -> expression % expression
Rule 50    expression -> expression | expression
Rule 51    expression -> expression & expression
Rule 52    expression -> expression ^ expression
Rule 53    expression -> expression AND expression
Rule 54    expression -> expression OR expression
Rule 55    expression -> expression SHL expression
Rule 56    expression -> expression SHR expression
Rule 57    expression -> expression EQ expression
Rule 58    expression -> expression NEQ expression
Rule 59    expression -> expression > expression
Rule 60    expression -> expression < expression
Rule 61    expression -> expression LE expression
Rule 62    expression -> expression GE expression
Rule 63    expression -> ( expression )
Rule 64    expression -> ( error )
Rule 65    expression -> ID ( expr_list_or_empty )
Rule 66    expression -> ID ( error )
Rule 67    expr_list_or_empty -> expr_list
Rule 68    expr_list_or_empty -> <empty>
Rule 69    expr_list -> expr_list , expression
Rule 70    expr_list -> expression
Rule 71    fundefs_opt -> fundefs
Rule 72    fundefs_opt -> <empty>
Rule 73    fundefs -> fundefs fundef
Rule 74    fundefs -> fundef
Rule 75    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 76    args_list_or_empty -> args_list
Rule 77    args_list_or_empty -> <empty>
Rule 78    args_list -> args_list , arg
Rule 79    args_list -> arg
Rule 80    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 49
&                    : 51
(                    : 28 29 30 31 32 33 63 64 65 66 75
)                    : 28 29 30 31 32 33 63 64 65 66 75
*                    : 47
+                    : 45
,                    : 6 69 78
-                    : 46
/                    : 48
:                    : 26
;                    : 4 5 23 24 25 27 34 35 36 37
<                    : 60
=                    : 8 27
>                    : 59
AND                  : 53
BREAK                : 37
CONTINUE             : 36
ELSE                 : 29 31
EQ                   : 57
FLOAT                : 41
GE                   : 62
ID                   : 8 26 27 44 65 66 75 80
IF                   : 28 29 30 31
INTEGER              : 40
LE                   : 61
NEQ                  : 58
OR                   : 54
PRINT                : 24 25
REPEAT               : 34
RETURN               : 35
SHL                  : 55
SHR                  : 56
STRING               : 42
TYPE                 : 4 75 80
UNTIL                : 34
WHILE                : 32 33
^                    : 52
error                : 5 25 30 31 33 64 66
{                    : 38
|                    : 50
}                    : 38

Nonterminals, with rules where they appear

arg                  : 78 79
args_list            : 76 78
args_list_or_empty   : 75
assignment           : 15
break_instr          : 20
choice_instr         : 16
compound_instr       : 22 75
condition            : 28 29 32 34
const                : 43
continue_instr       : 21
declaration          : 2
declarations         : 1 2 38
expr_list            : 24 67 69
expr_list_or_empty   : 65
expression           : 8 23 27 35 39 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 69 70
fundef               : 73 74
fundefs              : 71 73
fundefs_opt          : 1
init                 : 6 7
inits                : 4 6
instruction          : 11 12 26 28 29 29 30 31 31 32 33
instructions         : 9 11 34
instructions_opt     : 1 38
labeled_instr        : 14
print_instr          : 13
program              : 0
repeat_instr         : 18
return_instr         : 19
while_instr          : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations fundefs_opt instructions_opt
    (2) declarations -> . declarations declaration
    (3) declarations -> .

    TYPE            reduce using rule 3 (declarations -> .)
    error           reduce using rule 3 (declarations -> .)
    PRINT           reduce using rule 3 (declarations -> .)
    ID              reduce using rule 3 (declarations -> .)
    IF              reduce using rule 3 (declarations -> .)
    WHILE           reduce using rule 3 (declarations -> .)
    REPEAT          reduce using rule 3 (declarations -> .)
    RETURN          reduce using rule 3 (declarations -> .)
    BREAK           reduce using rule 3 (declarations -> .)
    CONTINUE        reduce using rule 3 (declarations -> .)
    {               reduce using rule 3 (declarations -> .)
    (               reduce using rule 3 (declarations -> .)
    INTEGER         reduce using rule 3 (declarations -> .)
    FLOAT           reduce using rule 3 (declarations -> .)
    STRING          reduce using rule 3 (declarations -> .)
    $end            reduce using rule 3 (declarations -> .)

    program                        shift and go to state 1
    declarations                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations . fundefs_opt instructions_opt
    (2) declarations -> declarations . declaration
    (71) fundefs_opt -> . fundefs
    (72) fundefs_opt -> .
    (4) declaration -> . TYPE inits ;
    (5) declaration -> . error ;
    (73) fundefs -> . fundefs fundef
    (74) fundefs -> . fundef
    (75) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr

    PRINT           reduce using rule 72 (fundefs_opt -> .)
    ID              reduce using rule 72 (fundefs_opt -> .)
    IF              reduce using rule 72 (fundefs_opt -> .)
    WHILE           reduce using rule 72 (fundefs_opt -> .)
    REPEAT          reduce using rule 72 (fundefs_opt -> .)
    RETURN          reduce using rule 72 (fundefs_opt -> .)
    BREAK           reduce using rule 72 (fundefs_opt -> .)
    CONTINUE        reduce using rule 72 (fundefs_opt -> .)
    {               reduce using rule 72 (fundefs_opt -> .)
    (               reduce using rule 72 (fundefs_opt -> .)
    INTEGER         reduce using rule 72 (fundefs_opt -> .)
    FLOAT           reduce using rule 72 (fundefs_opt -> .)
    STRING          reduce using rule 72 (fundefs_opt -> .)
    $end            reduce using rule 72 (fundefs_opt -> .)
    TYPE            shift and go to state 8
    error           shift and go to state 3

    fundefs                        shift and go to state 4
    fundef                         shift and go to state 5
    fundefs_opt                    shift and go to state 6
    declaration                    shift and go to state 7

state 3

    (5) declaration -> error . ;

    ;               shift and go to state 9


state 4

    (71) fundefs_opt -> fundefs .
    (73) fundefs -> fundefs . fundef
    (75) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr

    PRINT           reduce using rule 71 (fundefs_opt -> fundefs .)
    ID              reduce using rule 71 (fundefs_opt -> fundefs .)
    IF              reduce using rule 71 (fundefs_opt -> fundefs .)
    WHILE           reduce using rule 71 (fundefs_opt -> fundefs .)
    REPEAT          reduce using rule 71 (fundefs_opt -> fundefs .)
    RETURN          reduce using rule 71 (fundefs_opt -> fundefs .)
    BREAK           reduce using rule 71 (fundefs_opt -> fundefs .)
    CONTINUE        reduce using rule 71 (fundefs_opt -> fundefs .)
    {               reduce using rule 71 (fundefs_opt -> fundefs .)
    (               reduce using rule 71 (fundefs_opt -> fundefs .)
    INTEGER         reduce using rule 71 (fundefs_opt -> fundefs .)
    FLOAT           reduce using rule 71 (fundefs_opt -> fundefs .)
    STRING          reduce using rule 71 (fundefs_opt -> fundefs .)
    $end            reduce using rule 71 (fundefs_opt -> fundefs .)
    TYPE            shift and go to state 11

    fundef                         shift and go to state 10

state 5

    (74) fundefs -> fundef .

    TYPE            reduce using rule 74 (fundefs -> fundef .)
    PRINT           reduce using rule 74 (fundefs -> fundef .)
    ID              reduce using rule 74 (fundefs -> fundef .)
    IF              reduce using rule 74 (fundefs -> fundef .)
    WHILE           reduce using rule 74 (fundefs -> fundef .)
    REPEAT          reduce using rule 74 (fundefs -> fundef .)
    RETURN          reduce using rule 74 (fundefs -> fundef .)
    BREAK           reduce using rule 74 (fundefs -> fundef .)
    CONTINUE        reduce using rule 74 (fundefs -> fundef .)
    {               reduce using rule 74 (fundefs -> fundef .)
    (               reduce using rule 74 (fundefs -> fundef .)
    INTEGER         reduce using rule 74 (fundefs -> fundef .)
    FLOAT           reduce using rule 74 (fundefs -> fundef .)
    STRING          reduce using rule 74 (fundefs -> fundef .)
    $end            reduce using rule 74 (fundefs -> fundef .)


state 6

    (1) program -> declarations fundefs_opt . instructions_opt
    (9) instructions_opt -> . instructions
    (10) instructions_opt -> .
    (11) instructions -> . instructions instruction
    (12) instructions -> . instruction
    (13) instruction -> . print_instr
    (14) instruction -> . labeled_instr
    (15) instruction -> . assignment
    (16) instruction -> . choice_instr
    (17) instruction -> . while_instr
    (18) instruction -> . repeat_instr
    (19) instruction -> . return_instr
    (20) instruction -> . break_instr
    (21) instruction -> . continue_instr
    (22) instruction -> . compound_instr
    (23) instruction -> . expression ;
    (24) print_instr -> . PRINT expr_list ;
    (25) print_instr -> . PRINT error ;
    (26) labeled_instr -> . ID : instruction
    (27) assignment -> . ID = expression ;
    (28) choice_instr -> . IF ( condition ) instruction
    (29) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (30) choice_instr -> . IF ( error ) instruction
    (31) choice_instr -> . IF ( error ) instruction ELSE instruction
    (32) while_instr -> . WHILE ( condition ) instruction
    (33) while_instr -> . WHILE ( error ) instruction
    (34) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (35) return_instr -> . RETURN expression ;
    (37) break_instr -> . BREAK ;
    (36) continue_instr -> . CONTINUE ;
    (38) compound_instr -> . { declarations instructions_opt }
    (43) expression -> . const
    (44) expression -> . ID
    (45) expression -> . expression + expression
    (46) expression -> . expression - expression
    (47) expression -> . expression * expression
    (48) expression -> . expression / expression
    (49) expression -> . expression % expression
    (50) expression -> . expression | expression
    (51) expression -> . expression & expression
    (52) expression -> . expression ^ expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression SHL expression
    (56) expression -> . expression SHR expression
    (57) expression -> . expression EQ expression
    (58) expression -> . expression NEQ expression
    (59) expression -> . expression > expression
    (60) expression -> . expression < expression
    (61) expression -> . expression LE expression
    (62) expression -> . expression GE expression
    (63) expression -> . ( expression )
    (64) expression -> . ( error )
    (65) expression -> . ID ( expr_list_or_empty )
    (66) expression -> . ID ( error )
    (40) const -> . INTEGER
    (41) const -> . FLOAT
    (42) const -> . STRING

    $end            reduce using rule 10 (instructions_opt -> .)
    PRINT           shift and go to state 15
    ID              shift and go to state 30
    IF              shift and go to state 14
    WHILE           shift and go to state 16
    REPEAT          shift and go to state 24
    RETURN          shift and go to state 12
    BREAK           shift and go to state 35
    CONTINUE        shift and go to state 37
    {               shift and go to state 38
    (               shift and go to state 20
    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 32
    STRING          shift and go to state 25

    return_instr                   shift and go to state 18
    instruction                    shift and go to state 34
    const                          shift and go to state 19
    print_instr                    shift and go to state 36
    assignment                     shift and go to state 26
    compound_instr                 shift and go to state 29
    choice_instr                   shift and go to state 13
    continue_instr                 shift and go to state 21
    labeled_instr                  shift and go to state 27
    instructions_opt               shift and go to state 28
    break_instr                    shift and go to state 33
    while_instr                    shift and go to state 22
    expression                     shift and go to state 39
    repeat_instr                   shift and go to state 17
    instructions                   shift and go to state 31

state 7

    (2) declarations -> declarations declaration .

    TYPE            reduce using rule 2 (declarations -> declarations declaration .)
    error           reduce using rule 2 (declarations -> declarations declaration .)
    PRINT           reduce using rule 2 (declarations -> declarations declaration .)
    ID              reduce using rule 2 (declarations -> declarations declaration .)
    IF              reduce using rule 2 (declarations -> declarations declaration .)
    WHILE           reduce using rule 2 (declarations -> declarations declaration .)
    REPEAT          reduce using rule 2 (declarations -> declarations declaration .)
    RETURN          reduce using rule 2 (declarations -> declarations declaration .)
    BREAK           reduce using rule 2 (declarations -> declarations declaration .)
    CONTINUE        reduce using rule 2 (declarations -> declarations declaration .)
    {               reduce using rule 2 (declarations -> declarations declaration .)
    (               reduce using rule 2 (declarations -> declarations declaration .)
    INTEGER         reduce using rule 2 (declarations -> declarations declaration .)
    FLOAT           reduce using rule 2 (declarations -> declarations declaration .)
    STRING          reduce using rule 2 (declarations -> declarations declaration .)
    $end            reduce using rule 2 (declarations -> declarations declaration .)
    }               reduce using rule 2 (declarations -> declarations declaration .)


state 8

    (4) declaration -> TYPE . inits ;
    (75) fundef -> TYPE . ID ( args_list_or_empty ) compound_instr
    (6) inits -> . inits , init
    (7) inits -> . init
    (8) init -> . ID = expression

    ID              shift and go to state 42

    init                           shift and go to state 40
    inits                          shift and go to state 41

state 9

    (5) declaration -> error ; .

    TYPE            reduce using rule 5 (declaration -> error ; .)
    error           reduce using rule 5 (declaration -> error ; .)
    PRINT           reduce using rule 5 (declaration -> error ; .)
    ID              reduce using rule 5 (declaration -> error ; .)
    IF              reduce using rule 5 (declaration -> error ; .)
    WHILE           reduce using rule 5 (declaration -> error ; .)
    REPEAT          reduce using rule 5 (declaration -> error ; .)
    RETURN          reduce using rule 5 (declaration -> error ; .)
    BREAK           reduce using rule 5 (declaration -> error ; .)
    CONTINUE        reduce using rule 5 (declaration -> error ; .)
    {               reduce using rule 5 (declaration -> error ; .)
    (               reduce using rule 5 (declaration -> error ; .)
    INTEGER         reduce using rule 5 (declaration -> error ; .)
    FLOAT           reduce using rule 5 (declaration -> error ; .)
    STRING          reduce using rule 5 (declaration -> error ; .)
    }               reduce using rule 5 (declaration -> error ; .)
    $end            reduce using rule 5 (declaration -> error ; .)


state 10

    (73) fundefs -> fundefs fundef .

    TYPE            reduce using rule 73 (fundefs -> fundefs fundef .)
    PRINT           reduce using rule 73 (fundefs -> fundefs fundef .)
    ID              reduce using rule 73 (fundefs -> fundefs fundef .)
    IF              reduce using rule 73 (fundefs -> fundefs fundef .)
    WHILE           reduce using rule 73 (fundefs -> fundefs fundef .)
    REPEAT          reduce using rule 73 (fundefs -> fundefs fundef .)
    RETURN          reduce using rule 73 (fundefs -> fundefs fundef .)
    BREAK           reduce using rule 73 (fundefs -> fundefs fundef .)
    CONTINUE        reduce using rule 73 (fundefs -> fundefs fundef .)
    {               reduce using rule 73 (fundefs -> fundefs fundef .)
    (               reduce using rule 73 (fundefs -> fundefs fundef .)
    INTEGER         reduce using rule 73 (fundefs -> fundefs fundef .)
    FLOAT           reduce using rule 73 (fundefs -> fundefs fundef .)
    STRING          reduce using rule 73 (fundefs -> fundefs fundef .)
    $end            reduce using rule 73 (fundefs -> fundefs fundef .)


state 11

    (75) fundef -> TYPE . ID ( args_list_or_empty ) compound_instr

    ID              shift and go to state 43


state 12

    (35) return_instr -> RETURN . expression ;
    (43) expression -> . const
    (44) expression -> . ID
    (45) expression -> . expression + expression
    (46) expression -> . expression - expression
    (47) expression -> . expression * expression
    (48) expression -> . expression / expression
    (49) expression -> . expression % expression
    (50) expression -> . expression | expression
    (51) expression -> . expression & expression
    (52) expression -> . expression ^ expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression SHL expression
    (56) expression -> . expression SHR expression
    (57) expression -> . expression EQ expression
    (58) expression -> . expression NEQ expression
    (59) expression -> . expression > expression
    (60) expression -> . expression < expression
    (61) expression -> . expression LE expression
    (62) expression -> . expression GE expression
    (63) expression -> . ( expression )
    (64) expression -> . ( error )
    (65) expression -> . ID ( expr_list_or_empty )
    (66) expression -> . ID ( error )
    (40) const -> . INTEGER
    (41) const -> . FLOAT
    (42) const -> . STRING

    ID              shift and go to state 44
    (               shift and go to state 20
    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 32
    STRING          shift and go to state 25

    const                          shift and go to state 19
    expression                     shift and go to state 45

state 13

    (16) instruction -> choice_instr .

    PRINT           reduce using rule 16 (instruction -> choice_instr .)
    ID              reduce using rule 16 (instruction -> choice_instr .)
    IF              reduce using rule 16 (instruction -> choice_instr .)
    WHILE           reduce using rule 16 (instruction -> choice_instr .)
    REPEAT          reduce using rule 16 (instruction -> choice_instr .)
    RETURN          reduce using rule 16 (instruction -> choice_instr .)
    BREAK           reduce using rule 16 (instruction -> choice_instr .)
    CONTINUE        reduce using rule 16 (instruction -> choice_instr .)
    {               reduce using rule 16 (instruction -> choice_instr .)
    (               reduce using rule 16 (instruction -> choice_instr .)
    INTEGER         reduce using rule 16 (instruction -> choice_instr .)
    FLOAT           reduce using rule 16 (instruction -> choice_instr .)
    STRING          reduce using rule 16 (instruction -> choice_instr .)
    $end            reduce using rule 16 (instruction -> choice_instr .)
    UNTIL           reduce using rule 16 (instruction -> choice_instr .)
    }               reduce using rule 16 (instruction -> choice_instr .)
    ELSE            reduce using rule 16 (instruction -> choice_instr .)


state 14

    (28) choice_instr -> IF . ( condition ) instruction
    (29) choice_instr -> IF . ( condition ) instruction ELSE instruction
    (30) choice_instr -> IF . ( error ) instruction
    (31) choice_instr -> IF . ( error ) instruction ELSE instruction

    (               shift and go to state 46


state 15

    (24) print_instr -> PRINT . expr_list ;
    (25) print_instr -> PRINT . error ;
    (69) expr_list -> . expr_list , expression
    (70) expr_list -> . expression
    (43) expression -> . const
    (44) expression -> . ID
    (45) expression -> . expression + expression
    (46) expression -> . expression - expression
    (47) expression -> . expression * expression
    (48) expression -> . expression / expression
    (49) expression -> . expression % expression
    (50) expression -> . expression | expression
    (51) expression -> . expression & expression
    (52) expression -> . expression ^ expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression SHL expression
    (56) expression -> . expression SHR expression
    (57) expression -> . expression EQ expression
    (58) expression -> . expression NEQ expression
    (59) expression -> . expression > expression
    (60) expression -> . expression < expression
    (61) expression -> . expression LE expression
    (62) expression -> . expression GE expression
    (63) expression -> . ( expression )
    (64) expression -> . ( error )
    (65) expression -> . ID ( expr_list_or_empty )
    (66) expression -> . ID ( error )
    (40) const -> . INTEGER
    (41) const -> . FLOAT
    (42) const -> . STRING

    error           shift and go to state 48
    ID              shift and go to state 44
    (               shift and go to state 20
    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 32
    STRING          shift and go to state 25

    expr_list                      shift and go to state 47
    expression                     shift and go to state 49
    const                          shift and go to state 19

state 16

    (32) while_instr -> WHILE . ( condition ) instruction
    (33) while_instr -> WHILE . ( error ) instruction

    (               shift and go to state 50


state 17

    (18) instruction -> repeat_instr .

    PRINT           reduce using rule 18 (instruction -> repeat_instr .)
    ID              reduce using rule 18 (instruction -> repeat_instr .)
    IF              reduce using rule 18 (instruction -> repeat_instr .)
    WHILE           reduce using rule 18 (instruction -> repeat_instr .)
    REPEAT          reduce using rule 18 (instruction -> repeat_instr .)
    RETURN          reduce using rule 18 (instruction -> repeat_instr .)
    BREAK           reduce using rule 18 (instruction -> repeat_instr .)
    CONTINUE        reduce using rule 18 (instruction -> repeat_instr .)
    {               reduce using rule 18 (instruction -> repeat_instr .)
    (               reduce using rule 18 (instruction -> repeat_instr .)
    INTEGER         reduce using rule 18 (instruction -> repeat_instr .)
    FLOAT           reduce using rule 18 (instruction -> repeat_instr .)
    STRING          reduce using rule 18 (instruction -> repeat_instr .)
    $end            reduce using rule 18 (instruction -> repeat_instr .)
    UNTIL           reduce using rule 18 (instruction -> repeat_instr .)
    }               reduce using rule 18 (instruction -> repeat_instr .)
    ELSE            reduce using rule 18 (instruction -> repeat_instr .)


state 18

    (19) instruction -> return_instr .

    PRINT           reduce using rule 19 (instruction -> return_instr .)
    ID              reduce using rule 19 (instruction -> return_instr .)
    IF              reduce using rule 19 (instruction -> return_instr .)
    WHILE           reduce using rule 19 (instruction -> return_instr .)
    REPEAT          reduce using rule 19 (instruction -> return_instr .)
    RETURN          reduce using rule 19 (instruction -> return_instr .)
    BREAK           reduce using rule 19 (instruction -> return_instr .)
    CONTINUE        reduce using rule 19 (instruction -> return_instr .)
    {               reduce using rule 19 (instruction -> return_instr .)
    (               reduce using rule 19 (instruction -> return_instr .)
    INTEGER         reduce using rule 19 (instruction -> return_instr .)
    FLOAT           reduce using rule 19 (instruction -> return_instr .)
    STRING          reduce using rule 19 (instruction -> return_instr .)
    $end            reduce using rule 19 (instruction -> return_instr .)
    UNTIL           reduce using rule 19 (instruction -> return_instr .)
    }               reduce using rule 19 (instruction -> return_instr .)
    ELSE            reduce using rule 19 (instruction -> return_instr .)


state 19

    (43) expression -> const .

    +               reduce using rule 43 (expression -> const .)
    -               reduce using rule 43 (expression -> const .)
    *               reduce using rule 43 (expression -> const .)
    /               reduce using rule 43 (expression -> const .)
    %               reduce using rule 43 (expression -> const .)
    |               reduce using rule 43 (expression -> const .)
    &               reduce using rule 43 (expression -> const .)
    ^               reduce using rule 43 (expression -> const .)
    AND             reduce using rule 43 (expression -> const .)
    OR              reduce using rule 43 (expression -> const .)
    SHL             reduce using rule 43 (expression -> const .)
    SHR             reduce using rule 43 (expression -> const .)
    EQ              reduce using rule 43 (expression -> const .)
    NEQ             reduce using rule 43 (expression -> const .)
    >               reduce using rule 43 (expression -> const .)
    <               reduce using rule 43 (expression -> const .)
    LE              reduce using rule 43 (expression -> const .)
    GE              reduce using rule 43 (expression -> const .)
    ;               reduce using rule 43 (expression -> const .)
    ,               reduce using rule 43 (expression -> const .)
    )               reduce using rule 43 (expression -> const .)


state 20

    (63) expression -> ( . expression )
    (64) expression -> ( . error )
    (43) expression -> . const
    (44) expression -> . ID
    (45) expression -> . expression + expression
    (46) expression -> . expression - expression
    (47) expression -> . expression * expression
    (48) expression -> . expression / expression
    (49) expression -> . expression % expression
    (50) expression -> . expression | expression
    (51) expression -> . expression & expression
    (52) expression -> . expression ^ expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression SHL expression
    (56) expression -> . expression SHR expression
    (57) expression -> . expression EQ expression
    (58) expression -> . expression NEQ expression
    (59) expression -> . expression > expression
    (60) expression -> . expression < expression
    (61) expression -> . expression LE expression
    (62) expression -> . expression GE expression
    (63) expression -> . ( expression )
    (64) expression -> . ( error )
    (65) expression -> . ID ( expr_list_or_empty )
    (66) expression -> . ID ( error )
    (40) const -> . INTEGER
    (41) const -> . FLOAT
    (42) const -> . STRING

    error           shift and go to state 51
    ID              shift and go to state 44
    (               shift and go to state 20
    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 32
    STRING          shift and go to state 25

    const                          shift and go to state 19
    expression                     shift and go to state 52

state 21

    (21) instruction -> continue_instr .

    PRINT           reduce using rule 21 (instruction -> continue_instr .)
    ID              reduce using rule 21 (instruction -> continue_instr .)
    IF              reduce using rule 21 (instruction -> continue_instr .)
    WHILE           reduce using rule 21 (instruction -> continue_instr .)
    REPEAT          reduce using rule 21 (instruction -> continue_instr .)
    RETURN          reduce using rule 21 (instruction -> continue_instr .)
    BREAK           reduce using rule 21 (instruction -> continue_instr .)
    CONTINUE        reduce using rule 21 (instruction -> continue_instr .)
    {               reduce using rule 21 (instruction -> continue_instr .)
    (               reduce using rule 21 (instruction -> continue_instr .)
    INTEGER         reduce using rule 21 (instruction -> continue_instr .)
    FLOAT           reduce using rule 21 (instruction -> continue_instr .)
    STRING          reduce using rule 21 (instruction -> continue_instr .)
    $end            reduce using rule 21 (instruction -> continue_instr .)
    UNTIL           reduce using rule 21 (instruction -> continue_instr .)
    }               reduce using rule 21 (instruction -> continue_instr .)
    ELSE            reduce using rule 21 (instruction -> continue_instr .)


state 22

    (17) instruction -> while_instr .

    PRINT           reduce using rule 17 (instruction -> while_instr .)
    ID              reduce using rule 17 (instruction -> while_instr .)
    IF              reduce using rule 17 (instruction -> while_instr .)
    WHILE           reduce using rule 17 (instruction -> while_instr .)
    REPEAT          reduce using rule 17 (instruction -> while_instr .)
    RETURN          reduce using rule 17 (instruction -> while_instr .)
    BREAK           reduce using rule 17 (instruction -> while_instr .)
    CONTINUE        reduce using rule 17 (instruction -> while_instr .)
    {               reduce using rule 17 (instruction -> while_instr .)
    (               reduce using rule 17 (instruction -> while_instr .)
    INTEGER         reduce using rule 17 (instruction -> while_instr .)
    FLOAT           reduce using rule 17 (instruction -> while_instr .)
    STRING          reduce using rule 17 (instruction -> while_instr .)
    $end            reduce using rule 17 (instruction -> while_instr .)
    UNTIL           reduce using rule 17 (instruction -> while_instr .)
    }               reduce using rule 17 (instruction -> while_instr .)
    ELSE            reduce using rule 17 (instruction -> while_instr .)


state 23

    (40) const -> INTEGER .

    +               reduce using rule 40 (const -> INTEGER .)
    -               reduce using rule 40 (const -> INTEGER .)
    *               reduce using rule 40 (const -> INTEGER .)
    /               reduce using rule 40 (const -> INTEGER .)
    %               reduce using rule 40 (const -> INTEGER .)
    |               reduce using rule 40 (const -> INTEGER .)
    &               reduce using rule 40 (const -> INTEGER .)
    ^               reduce using rule 40 (const -> INTEGER .)
    AND             reduce using rule 40 (const -> INTEGER .)
    OR              reduce using rule 40 (const -> INTEGER .)
    SHL             reduce using rule 40 (const -> INTEGER .)
    SHR             reduce using rule 40 (const -> INTEGER .)
    EQ              reduce using rule 40 (const -> INTEGER .)
    NEQ             reduce using rule 40 (const -> INTEGER .)
    >               reduce using rule 40 (const -> INTEGER .)
    <               reduce using rule 40 (const -> INTEGER .)
    LE              reduce using rule 40 (const -> INTEGER .)
    GE              reduce using rule 40 (const -> INTEGER .)
    ;               reduce using rule 40 (const -> INTEGER .)
    ,               reduce using rule 40 (const -> INTEGER .)
    )               reduce using rule 40 (const -> INTEGER .)


state 24

    (34) repeat_instr -> REPEAT . instructions UNTIL condition ;
    (11) instructions -> . instructions instruction
    (12) instructions -> . instruction
    (13) instruction -> . print_instr
    (14) instruction -> . labeled_instr
    (15) instruction -> . assignment
    (16) instruction -> . choice_instr
    (17) instruction -> . while_instr
    (18) instruction -> . repeat_instr
    (19) instruction -> . return_instr
    (20) instruction -> . break_instr
    (21) instruction -> . continue_instr
    (22) instruction -> . compound_instr
    (23) instruction -> . expression ;
    (24) print_instr -> . PRINT expr_list ;
    (25) print_instr -> . PRINT error ;
    (26) labeled_instr -> . ID : instruction
    (27) assignment -> . ID = expression ;
    (28) choice_instr -> . IF ( condition ) instruction
    (29) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (30) choice_instr -> . IF ( error ) instruction
    (31) choice_instr -> . IF ( error ) instruction ELSE instruction
    (32) while_instr -> . WHILE ( condition ) instruction
    (33) while_instr -> . WHILE ( error ) instruction
    (34) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (35) return_instr -> . RETURN expression ;
    (37) break_instr -> . BREAK ;
    (36) continue_instr -> . CONTINUE ;
    (38) compound_instr -> . { declarations instructions_opt }
    (43) expression -> . const
    (44) expression -> . ID
    (45) expression -> . expression + expression
    (46) expression -> . expression - expression
    (47) expression -> . expression * expression
    (48) expression -> . expression / expression
    (49) expression -> . expression % expression
    (50) expression -> . expression | expression
    (51) expression -> . expression & expression
    (52) expression -> . expression ^ expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression SHL expression
    (56) expression -> . expression SHR expression
    (57) expression -> . expression EQ expression
    (58) expression -> . expression NEQ expression
    (59) expression -> . expression > expression
    (60) expression -> . expression < expression
    (61) expression -> . expression LE expression
    (62) expression -> . expression GE expression
    (63) expression -> . ( expression )
    (64) expression -> . ( error )
    (65) expression -> . ID ( expr_list_or_empty )
    (66) expression -> . ID ( error )
    (40) const -> . INTEGER
    (41) const -> . FLOAT
    (42) const -> . STRING

    PRINT           shift and go to state 15
    ID              shift and go to state 30
    IF              shift and go to state 14
    WHILE           shift and go to state 16
    REPEAT          shift and go to state 24
    RETURN          shift and go to state 12
    BREAK           shift and go to state 35
    CONTINUE        shift and go to state 37
    {               shift and go to state 38
    (               shift and go to state 20
    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 32
    STRING          shift and go to state 25

    return_instr                   shift and go to state 18
    const                          shift and go to state 19
    assignment                     shift and go to state 26
    instruction                    shift and go to state 34
    compound_instr                 shift and go to state 29
    continue_instr                 shift and go to state 21
    labeled_instr                  shift and go to state 27
    print_instr                    shift and go to state 36
    choice_instr                   shift and go to state 13
    repeat_instr                   shift and go to state 17
    break_instr                    shift and go to state 33
    while_instr                    shift and go to state 22
    expression                     shift and go to state 39
    instructions                   shift and go to state 53

state 25

    (42) const -> STRING .
